--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,8 @@
     <body>
         <!-- <nav class="navbar navbar-dark bg-dark text-light">Sound Test</nav> -->
         <div id="root"></div>
+        <div id="temp" style="display: none"></div>
+        <!-- <div id="temp"></div> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
